2018-05-16  Youenn Fablet  <youenn@apple.com>

        REGRESSION (r229735): LayoutTest http/wpt/service-workers/third-party-registration.html is a flaky timeout
        https://bugs.webkit.org/show_bug.cgi?id=183860
        <rdar://problem/38975251>

        Reviewed by Geoffrey Garen.

        Make test more robust by introducing a timeout and better failure reporting.
        Mark test as Pass/Fail to start gathering results on test stability.

        * http/wpt/service-workers/resources/third-party-registration-frame.html:
        * platform/ios-wk2/TestExpectations:
        * platform/mac-wk2/TestExpectations:

2018-05-16  David Fenton  <david_fenton@apple.com>

        Mark LayoutTest animations/needs-layout.html as Flaky on macOS debug.
        https://bugs.webkit.org/show_bug.cgi?id=185659

        Unreviewed test gardening.

        * platform/mac/TestExpectations:

2018-05-16  Antoine Quint  <graouts@apple.com>

        [Web Animations] Turn Web Animations with CSS integration on for test runners
        https://bugs.webkit.org/show_bug.cgi?id=184819

        Unreviewed. Another attempt to make this test more robust.

        * transitions/interrupted-transition-hardware.html:

2018-05-16  Chris Nardi  <cnardi@chromium.org>

        Remove Document#selectedStylesheetSet/preferredStylesheetSet
        https://bugs.webkit.org/show_bug.cgi?id=185381

        Reviewed by Darin Adler.

        Update tests to remove selectedStylesheetSet/preferredStylesheetSet.

        * fast/css/link-disabled-attr-expected.txt:
        * fast/css/link-disabled-attr.html:
        * fast/dom/assign-to-prototype-accessor-on-prototype-should-throw-expected.txt:
        * fast/dom/assign-to-prototype-accessor-on-prototype-should-throw.html:
        * fast/dom/document-attribute-js-null-expected.txt:
        * fast/dom/document-attribute-js-null.html:
        * fast/shadow-dom/link-element-in-shadow-tree-expected.txt:
        * fast/shadow-dom/link-element-in-shadow-tree.html: